--- a/src/App.scss
+++ b/src/App.scss
@@ -354,6 +354,7 @@ body {
   background-color: $secondary;
   box-shadow: 0 2px 30px 3px #0812256c;
   color: $primary;
+  .Documents-btn
   .Broadcast-to {
     background-color: $primary;
     color: $secondary;
@@ -447,16 +448,16 @@ body {
       overflow: hidden;
       position: relative;
     }
-
+    
     .svgIcon {
       width: 17px;
       transition-duration: 0.3s;
     }
-
+    
     .svgIcon path {
       fill: white;
     }
-
+    
     .del-button:hover {
       width: 80px;
       border-radius: 50px;
@@ -464,13 +465,13 @@ body {
       background-color: #d34e4a;
       align-items: center;
     }
-
+    
     .del-button:hover .svgIcon {
       width: 40px;
       transition-duration: 0.3s;
       transform: translateY(60%);
     }
-
+    
     .del-button::before {
       position: absolute;
       top: -20px;
@@ -479,7 +480,7 @@ body {
       transition-duration: 0.3s;
       font-size: 2px;
     }
-
+    
     .del-button:hover::before {
       font-size: 13px;
       opacity: 1;
@@ -487,14 +488,14 @@ body {
       transition-duration: 0.3s;
     }
     /* From Uiverse.io by aaronross1 */ 
-.edit-button {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: rgb(20, 20, 20);
-  border: none;
-  font-weight: 600;
-  display: flex;
+    .edit-button {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: rgb(20, 20, 20);
+      border: none;
+      font-weight: 600;
+      display: flex;
   align-items: center;
   justify-content: center;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
@@ -573,7 +574,7 @@ body {
   .generate-login-btn:hover {
     color: $primary;
   }
-
+  
   .generate-login-btn:after {
     content: "";
     background: $secondary;
@@ -586,10 +587,74 @@ body {
     transform: skewX(-45deg) scale(0, 1);
     transition: all 0.5s;
   }
-
+  
   .generate-login-btn:hover:after {
     transform: skewX(-45deg) scale(1, 1);
     -webkit-transition: all 0.5s;
     transition: all 0.5s;
   }
+}
+
+.generate-logins {
+  background-color: $secondary;
+  box-shadow: 0 2px 30px 3px #0812256c;
+  .submit-btn {
+    width: 10em;
+    height: 3rem;
+    margin: 0.5em;
+    margin-top: 2rem;
+    background: $secondary;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $primary;
+    border: none;
+    border-radius: 0.625em;
+    font-size: 1.1rem;
+    font-weight: bold;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    border: 1px solid $secondary;
+  }
+  
+  .submit-btn:hover {
+    color: $secondary;
+  }
+  
+  .submit-btn:after {
+    content: "";
+    background: $primary;
+    position: absolute;
+    z-index: -1;
+    left: -20%;
+    right: -20%;
+    top: 0;
+    bottom: 0;
+    transform: skewX(-45deg) scale(0, 1);
+    transition: all 0.5s;
+  }
+  
+  .submit-btn:hover:after {
+    transform: skewX(-45deg) scale(1, 1);
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+  .upload-div{
+    background-color: $primary;
+    color: $secondary;
+    
+  }
+}
+
+
+
+// ===================  EDIT PROFILE  ====================
+
+
+.editProfile{
+  background-color: $secondary;
+  box-shadow: 0 2px 30px 3px #0812256c;
+  color: $primary;
 }
