--- a/src/components/ADMIN/Broadcast/checkbox.scss
+++ b/src/components/ADMIN/Broadcast/checkbox.scss
@@ -17,7 +17,7 @@
   .checkBox div {
     width: 60px;
     height: 60px;
-    background-color: #b5c2ca;
+    background-color: gray;
     top: -52px;
     left: -52px;
     position: absolute;
