admin FRONTEND initial completion

--- a/src/App.scss
+++ b/src/App.scss
@@ -487,5 +487,14 @@ body {
 .editProfile{
   background-color: $secondary;
   box-shadow: 0 2px 30px 3px #0812256c;
-  color: $secondary;
+  color: $primary;
+}
+
+
+
+// ===================  PROJECT DETAILS  ====================
+.projectDetails{
+  background-color: $secondary;
+  box-shadow: 0 2px 30px 3px #0812256c;
+  color: $primary;
 }
