supervisor group details

--- a/src/App.scss
+++ b/src/App.scss
@@ -501,7 +501,7 @@ body {
 
 
 // ===================  PROJECT DETAILS  ====================
-.projectDetails{
+.projectDetails,.groupDetails{
   background-color: $secondary;
   box-shadow: 0 2px 30px 3px #0812256c;
   color: $primary;
