supervisor manage documents(project docs)

--- a/src/App.scss
+++ b/src/App.scss
@@ -500,7 +500,9 @@ body {
 
 
 
-// ===================  PROJECT DETAILS  ====================
+// ===================  PROJECT DETAILS  ====================\
+
+
 .projectDetails,.groupDetails{
   background-color: $secondary;
   box-shadow: 0 2px 30px 3px #0812256c;
@@ -517,15 +519,16 @@ body {
 
 // ===================  SUPERVISOR   ====================
 
-// ===================  SUPERVISOR HOME  ====================
-
-
-.supHome,.manageProjects,.manageDocuments{
+.supHome,.manageProjects,.manageDocuments,.documentDetail{
   background-color: $secondary;
   box-shadow: 0 2px 30px 3px #0812256c;
   color: $primary;
 }
+// ===================  SUPERVISOR HOME  ====================
 
 
 
-// ===================  SUPERVISOR MANAGE PROJECTS  ====================
+
+
+
+// ===================  SUPERVISOR MANAGE DOCUMENTS  ====================
